
syntax= "proto3";

package profiles_service;
option go_package = "profiles_service/v1/protos";
import "google/protobuf/timestamp.proto";


message GetUserProfileRequest {
    string AccountID = 1;
}

message GetUserProfileResponce {
    string Username = 1;
    string Email = 2;
    string ProfilePictureID = 3;
    google.protobuf.Timestamp RegistrationDate = 4;
}

message UpdateProfilePictureIDRequest {
    string AccountID = 1;
    string PictureID = 2;
}